--- a/LinkerPlayer/UserControls/TitlebarButtons.xaml
+++ b/LinkerPlayer/UserControls/TitlebarButtons.xaml
@@ -1,27 +1,27 @@
-﻿<UserControl x:Class="LinkerPlayer.UserControls.TitlebarButtons"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             d:DesignHeight="80" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="LinkerPlayer.UserControls.TitlebarButtons"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="80"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="MaximizeMinimizeButton" TargetType="{x:Type Button}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Grid Width="45" Height="25">
-                            <Border x:Name="border" Background="Transparent"/>
-                            <ContentPresenter HorizontalAlignment="Center"
-                                              VerticalAlignment="Center">
-                            </ContentPresenter>
+                            <Border x:Name="border" Background="Transparent" />
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Grid>
 
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" TargetName="border">
+                                <Setter TargetName="border" Property="Background">
                                     <Setter.Value>
-                                        <SolidColorBrush Opacity="0.1" Color="White"/>
+                                        <SolidColorBrush Opacity="0.1" Color="White" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -36,17 +36,15 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Grid Width="45" Height="25">
-                            <Border x:Name="border" Background="Transparent"/>
-                            <ContentPresenter HorizontalAlignment="Center"
-                                              VerticalAlignment="Center">
-                            </ContentPresenter>
+                            <Border x:Name="border" Background="Transparent" />
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Grid>
 
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" TargetName="border">
+                                <Setter TargetName="border" Property="Background">
                                     <Setter.Value>
-                                        <SolidColorBrush Opacity="0.9" Color="Red"/>
+                                        <SolidColorBrush Opacity="0.9" Color="Red" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -58,24 +56,52 @@
 
     </UserControl.Resources>
     <Grid>
-        <StackPanel WindowChrome.IsHitTestVisibleInChrome="True"
-                    Orientation="Horizontal"
-                    VerticalAlignment="Top"
-                    HorizontalAlignment="Right">
+        <StackPanel
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Orientation="Horizontal"
+            WindowChrome.IsHitTestVisibleInChrome="True">
 
-            <Button Name="MinimizeButton" Style="{DynamicResource MaximizeMinimizeButton}" MouseEnter="ButtonMouseEnter" MouseLeave="ButtonMouseLeave"
-                    Click="MinimizeButton_Click">
-                <Image Name="MinimizeButtonImage" Source="/Images/minimize.png" Width="10" Height="10" Opacity="0.6"/>
+            <Button
+                Name="MinimizeButton"
+                Click="MinimizeButton_Click"
+                MouseEnter="ButtonMouseEnter"
+                MouseLeave="ButtonMouseLeave"
+                Style="{DynamicResource MaximizeMinimizeButton}">
+                <Image
+                    Name="MinimizeButtonImage"
+                    Width="10"
+                    Height="10"
+                    Opacity="0.6"
+                    Source="/Images/minimize.png" />
             </Button>
 
-            <Button Name="MaximizeButton" Style="{DynamicResource MaximizeMinimizeButton}" MouseEnter="ButtonMouseEnter" MouseLeave="ButtonMouseLeave"
-                    Click="MaximizeButton_Click">
-                <Image Name="MaximizeButtonImage" Source="/Images/maximize.png" Width="10" Height="10" Opacity="0.6"/>
+            <Button
+                Name="MaximizeButton"
+                Click="MaximizeButton_Click"
+                MouseEnter="ButtonMouseEnter"
+                MouseLeave="ButtonMouseLeave"
+                Style="{DynamicResource MaximizeMinimizeButton}">
+                <Image
+                    Name="MaximizeButtonImage"
+                    Width="10"
+                    Height="10"
+                    Opacity="0.6"
+                    Source="/Images/maximize.png" />
             </Button>
 
-            <Button Name="CloseButton" Style="{DynamicResource CloseButton}" MouseEnter="ButtonMouseEnter" MouseLeave="ButtonMouseLeave"
-                    Click="CloseButton_Click">
-                <Image Name="CloseButtonImage" Source="/Images/close.png" Width="10" Height="10" Opacity="0.6"/>
+            <Button
+                Name="CloseButton"
+                Click="CloseButton_Click"
+                MouseEnter="ButtonMouseEnter"
+                MouseLeave="ButtonMouseLeave"
+                Style="{DynamicResource CloseButton}">
+                <Image
+                    Name="CloseButtonImage"
+                    Width="10"
+                    Height="10"
+                    Opacity="0.6"
+                    Source="/Images/close.png" />
             </Button>
         </StackPanel>
     </Grid>
