--- a/LinkerPlayer/UserControls/NewPlaylistButton.xaml
+++ b/LinkerPlayer/UserControls/NewPlaylistButton.xaml
@@ -1,26 +1,55 @@
-﻿<UserControl x:Class="LinkerPlayer.UserControls.NewPlaylistButton"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             d:DesignHeight="80" d:DesignWidth="290">
+﻿<UserControl
+    x:Class="LinkerPlayer.UserControls.NewPlaylistButton"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="80"
+    d:DesignWidth="290"
+    mc:Ignorable="d">
     <Grid>
-        <Button x:Name="AddButton" Width="50" Height="50" 
-                    HorizontalAlignment="Left" Margin="15" Background="#212128" 
-                    Padding="15" BorderBrush="Transparent" Click="AddButtonClick">
+        <Button
+            x:Name="AddButton"
+            Width="50"
+            Height="50"
+            Margin="15"
+            Padding="15"
+            HorizontalAlignment="Left"
+            Background="#212128"
+            BorderBrush="Transparent"
+            Click="AddButtonClick">
 
-            <Image Source="/Images/plus.png" Width="20" Height="20"/>
+            <Image
+                Width="20"
+                Height="20"
+                Source="/Images/plus.png" />
         </Button>
 
-        <TextBlock Text="New Playlist" FontFamily="/Fonts/#Montserrat" FontSize="22" FontWeight="DemiBold" 
-                   Foreground="#BDBDBD" VerticalAlignment="Center" Margin="80,0,0,0"/>
+        <TextBlock
+            Margin="80,0,0,0"
+            VerticalAlignment="Center"
+            FontFamily="/Fonts/#Montserrat"
+            FontSize="22"
+            FontWeight="DemiBold"
+            Foreground="#BDBDBD"
+            Text="New Playlist" />
 
-        <Popup x:Name="EnterNamePopup" PlacementTarget="{Binding ElementName=AddButton}" StaysOpen="False"
-               Placement="Bottom" Width="290" VerticalOffset="15" HorizontalOffset="0">
-            <Border Background="#212128" Padding="15">
-                <TextBox Name="PopupTextBox" FontFamily="/Fonts/#Montserrat" FontSize="22" FontWeight="DemiBold" 
-                         Foreground="#BDBDBD" KeyDown="PopupTextBox_KeyDown"/>
+        <Popup
+            x:Name="EnterNamePopup"
+            Width="290"
+            HorizontalOffset="0"
+            Placement="Bottom"
+            PlacementTarget="{Binding ElementName=AddButton}"
+            StaysOpen="False"
+            VerticalOffset="15">
+            <Border Padding="15" Background="#212128">
+                <TextBox
+                    Name="PopupTextBox"
+                    FontFamily="/Fonts/#Montserrat"
+                    FontSize="22"
+                    FontWeight="DemiBold"
+                    Foreground="#BDBDBD"
+                    KeyDown="PopupTextBox_KeyDown" />
             </Border>
         </Popup>
     </Grid>
