--- a/LinkerPlayer/UserControls/PlaylistText.xaml
+++ b/LinkerPlayer/UserControls/PlaylistText.xaml
@@ -1,14 +1,23 @@
-﻿<UserControl x:Class="LinkerPlayer.UserControls.PlaylistText"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             d:DesignHeight="80" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="LinkerPlayer.UserControls.PlaylistText"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="80"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <Grid>
         <Grid>
-            <Border Background="Black" Opacity="0.2"/>
-            <TextBlock Name="CurrentPlaylistName" Text="Playlist not selected" FontFamily="/Fonts/#Montserrat" FontSize="40" Foreground="#BDBDBD" VerticalAlignment="Center" Margin="20,0,0,0"/>
+            <Border Background="Black" Opacity="0.2" />
+            <TextBlock
+                Name="CurrentPlaylistName"
+                Margin="20,0,0,0"
+                VerticalAlignment="Center"
+                FontFamily="/Fonts/#Montserrat"
+                FontSize="40"
+                Foreground="#BDBDBD"
+                Text="Playlist not selected" />
         </Grid>
     </Grid>
 </UserControl>
