--- a/LinkerPlayer/UserControls/SongList.xaml
+++ b/LinkerPlayer/UserControls/SongList.xaml
@@ -2,10 +2,10 @@
     x:Class="LinkerPlayer.UserControls.SongList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:LinkerPlayer.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="clr-namespace:LinkerPlayer.Converters"
     d:DesignHeight="507"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -32,8 +32,8 @@
                             BorderBrush="Transparent"
                             Click="ClickRowElement"
                             FontFamily="/Fonts/#Montserrat"
-                            FontSize="18"
-                            FontWeight="Normal"
+                            FontSize="14"
+                            FontWeight="Medium"
                             Foreground="#BDBDBD">
                             <GridViewRowPresenter />
 
