blinker - Preparing for Song model overhaul.

--- a/LinkerPlayer/UserControls/SongList.xaml
+++ b/LinkerPlayer/UserControls/SongList.xaml
@@ -127,7 +127,7 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Name">
+                    <GridViewColumn Header="Title">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBox
